fix: gap spacing

--- a/src/app/style.css
+++ b/src/app/style.css
@@ -148,7 +148,7 @@ body.fullscreen {
 
 	&.sidepanel {
 		#topBar {
-			width: calc(100% - 400px);
+			width: calc(100% - 410px);
 		}
 	}
 
